# CMake-Cpp-OpenGL-Application

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: build.yml
App/: CMakeLists.txt
App/include/: image.h  model.h
App/resources/objects/lamp/: lamp.mtl
App/src/: mesh.cpp  model.cpp  texture.cpp  window.cpp
App/src/shader/: lamp.vert  main.frag  main.vert
cmake/: utilities.cmake
include/: camera.h  mesh.h  shader.h  textRenderer.h  texture.h  window.h
resources/objects/container/: container.mtl
src/: camera.cpp  image.cpp  main.cpp  shader.cpp  textRenderer.cpp  window.cpp
src/shader/: lamp.frag  lamp.vert  main.frag  main.vert  text.frag  text.vert
